# Nona

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRUBUTING.md  LICENSE  README.md  SUPPORT.md  compile.bat  compile.sh
config/: client.json  commands.json  splashes.json  variables.json
src/: client.cpp  client.h  index.cpp  index.h
src/cogs/channels/: c_create.cpp  c_create.h  c_delete.cpp  c_delete.h  c_spam.cpp  c_spam.h
src/cogs/emojis/: e_create.cpp  e_create.h  e_delete.cpp  e_delete.h
src/cogs/members/: m_ban.cpp  m_ban.h  m_give_permissions.cpp  m_give_permissions.h  m_kick.cpp  m_kick.h
src/cogs/roles/: r_create.cpp  r_create.h  r_delete.cpp  r_delete.h
src/cogs/stickers/: s_create.cpp  s_create.h
src/events/: on_ready.cpp  on_ready.h
src/interface/: command_worker.cpp  command_worker.h  loadCLI.cpp  loadCLI.h  loadGUI.cpp  loadGUI.h
src/misc/: colours.h  help.cpp  help.h  lower_string.cpp  lower_string.h  read_file.cpp  read_file.h  time.cpp  time.h  validate_command.cpp  validate_command.h
src/redis/: dispatcher.cpp  dispatcher.h  precaching.cpp  precaching.h  rate_limiter.cpp  rate_limiter.h
